--- a/package.json
+++ b/package.json
@@ -1,43 +1,42 @@
 {
-  "name": "lottery1st-web",
+  "name": "lovers-court-app",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.38",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/base": "^5.0.0-beta.7",
+    "@mui/icons-material": "^5.14.0",
+    "@mui/material": "^5.14.0",
+    "@types/node": "20.4.1",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
+    "@use-gesture/react": "^10.2.27",
+    "eslint": "8.44.0",
+    "eslint-config-next": "13.4.9",
+    "framer-motion": "^10.12.18",
+    "lodash-es": "^4.17.21",
+    "next": "13.4.9",
+    "next-translate": "^2.4.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-spring": "^9.7.2",
+    "react-svg": "^16.1.18",
+    "styled-components": "^6.0.3",
+    "swr": "^2.2.0",
+    "typescript": "5.1.6",
+    "zustand": "^4.3.9"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@svgr/webpack": "^8.0.1",
+    "@types/styled-components": "^5.1.26",
+    "next-translate-plugin": "^2.4.4",
+    "sass": "^1.63.6"
   }
 }
